style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');

* {
    font-family: "Open Sans", sans-serif;
}

body {
    background-color: rgb(13, 20, 12);
    color: white;
}

#column-holder {
    width: 50%;
}

@media only screen and (max-width: 1000px) {
    #column-holder {
        width: 90%;
    }
}

h1, h2 {
    cursor: default;
    color: rgb(233, 214, 153);
    font-family: "Playfair Display", serif;
    font-weight: 700;
}

hr {
    color: rgb(233, 214, 153);
}

img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

p {
    cursor: default;
    font-size: 20px;
}

a {
    color: rgb(207, 179, 85);
    text-decoration: none;
}

a:hover {
    color: rgb(13, 20, 12);
    background-color: rgb(207, 179, 85);
}

span {
    text-decoration: underline dotted;
}

.profile {
    border-style: solid;
    border-width: 2px;
    border-color: rgb(233, 214, 153);
}

